--- a/mobileBack/config/packages/security.yaml
+++ b/mobileBack/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: telephone
         # used to reload user from session & other features (e.g. switch_user)
         # used to reload user from session & other features (e.g. switch_user)
     firewalls:
@@ -24,7 +24,7 @@ security:
             anonymous: true
             json_login:
                 check_path:               /api/login_check
-                username_path:            email
+                username_path:            telephone
                 password_path:            password
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
